--- a/test/microhttp.html
+++ b/test/microhttp.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>microhttp tests</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <script src="../webcomponentsjs/webcomponents.js"></script>
-  <script src="../web-component-tester/browser.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+  <script src="../bower_components/underscore/underscore-min.js"></script>
   <script src="../microhttp.js"></script>
 </head>
 <body>
@@ -13,11 +14,18 @@
   (function(){
     'use strict';
     
-    test('a test', function() {
-      assert.equal(true,true);
+    test('a test', function(done) {
+      $http({
+        url:'./test.json'
+      })
+      .then(function(rsp){
+        assert.equal('hello',rsp.msg);
+        done();
+      })
+      .catch(done);
     });
 
-  })()
+  })();
   </script>
 </body>
 </html>
