remove dependency for underscore, added Promises polyfil

--- a/test/microhttp.html
+++ b/test/microhttp.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="../bower_components/web-component-tester/browser.js"></script>
-  <script src="../bower_components/underscore/underscore-min.js"></script>
+  <script src="../bower_components/es6-promise-polyfill/promise.min.js"></script>
   <script src="../microhttp.js"></script>
 </head>
 <body>
